<resources>
    <string name="app_name">IDGI</string>
    <string name="app_name_underscored"><u>IDGI</u></string>
    <string name="start">Start</string>

    <!-- General -->
    <string name="school">skola</string>
    <string name="subject">ämne</string>
    <string name="course">kurs</string>
    <string name="quiz">quiz</string>
    <string name="answer">svar</string>
    <string name="name">namn</string>


    <string name="teacher">Lärare</string>
    <string name="student">Student</string>


    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="ok">OK</string>

    <string name="quiz_next_question">Nästa fråga</string>
    <string name="quiz_finish">Slutför</string>
    <string name="quiz_no_hint">Det finns ingen ledtråd.</string>

    <!-- Nav drawer -->
    <string name="nav_drawer_not_logged_in">Ej inloggad.</string>
    <string name="nav_drawer_logged_in_as">Inloggad som %1$s</string>

    <!-- Course activity -->
    <string name="course_no_users">Det finns inga elever här just nu.</string>


    <!--
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lösenord (frivilligt)</string>
    <string name="action_sign_in">Logga in</string>
    <string name="action_sign_in_short">Logga in</string>
    <string name="error_invalid_email">Ogiltig emailadress</string>
    <string name="error_invalid_password">Lösenordet har för få tecken</string>
    <string name="error_incorrect_password">Ogiltigt lösenord</string>
    <string name="error_field_required">Det här fältet är obligatoriskt.</string>
    <string name="permission_rationale">"Tillåt appen att komma åt kontakter för att kunna auto-komplettera email"
    </string> -->

    <!-- SchoolListActivity -->
    <string name="list_school_title">Välj skola</string>

    <string name="navigation_drawer_open">Öppna navigation drawer</string>
    <string name="navigation_drawer_close">Stäng navigation drawer</string>

    <!-- Quiz & Quiz result Activities -->
    <string name="quiz_out_of_time">Tiden är ute!</string>
    <string name="quiz_leaving_prompt_title">Lämnar quiz</string>
    <string name="quiz_leaving_prompt">Är du säker på att du vill avbryta quiz?</string>
    <string name="quiz_result_finished_text">Klar!</string>
    <string name="quiz_result_retake_quiz">Gör om quiz</string>
    <string name="quiz_result_done">Tillbaka</string>
    <string name="quiz_result_answer_correct">Rätt svar</string>
    <string name="quiz_result_answer_incorrect">Fel svar</string>

    <!-- Content descriptions -->
    <string name="profile_picture">Profilbild</string>

    <!-- LessonActivity -->
    <string name="go_to_quiz">Gå till quiz</string>
    <string name="lesson_comments">Kommentarer</string>

    <!-- BrowseActivity -->
    <string name="browse_btn_subject">Sök via ämnen</string>
    <string name="browse_btn_school">Sök via skolor</string>

    <!-- Lists -->
    <string name="add_to_my_courses">Lägg till i mina kurser</string>
    <string name="added_to_my_courses">Ta bort från mina kurser</string>
    <string name="log_in_message">logga in för denna funktion</string>


    <!-- StartActivity -->
    <string name="start_btn_find_course">Hitta kurser</string>
    <string name="start_btn_log_in">Logga in</string>
    <string name="start_btn_create_account">Skapa konto</string>
    <string name="start_btn_account">Konto</string>
    <string name="start_txt_welcome_msg">Välkommen, %1$s!</string>

    <!-- Toolbars -->
    <string name="title_activity_browse">Hitta kurser</string>
    <string name="title_activity_login">Logga in</string>
    <string name="title_activity_create_account">Skapa konto</string>
    <string name="title_activity_profile">Min profil</string>
    <string name="title_activity_statistics">Statistik</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_school_list">Skolor</string>
    <string name="title_activity_subject_list">Ämnen</string>
    <string name="title_activity_course_list">Kurser</string>
    <string name="title_activity_lesson">Lektion</string>
    <string name="title_activity_quiz_result">Resultat</string>

    <!-- For CreateAccountActivity -->
    <string name="createAccount_hint_name">Namn (Obligatoriskt)</string>
    <string name="createAccount_hint_email">E-post (Obligatoriskt)</string>
    <string name="createAccount_hint_phone">Telefon</string>
    <string name="createAccount_btn_createAccount">Skapa konto</string>
    <string name="createAccount_hint_password">Lösenord (Obligatoriskt)</string>
    <string name="create_account_successful_toast">Ditt konto har skapats</string>

    <!-- Statistics -->
    <string name="statistics_completed_courses">Avklarade kurser</string>
    <string name="statistics_ongoing_courses">Pågående kurser</string>
    <string name="statistics_completed_quiz">Genomförda quiz</string>
    <string name="statistics_comment_amount">Kommenterar</string>
    <string name="statistics_seen_videos">Sedda videor</string>
    <string name="statistics_points">Poäng</string>

    <!-- Lesson -->
    <string name="content_lesson_leave_comment">Skriv en kommentar</string>
    <string name="content_lesson_post_comment">Lämna kommentar</string>
    <string name="content_lesson_no_lesson_found_title">N/A</string>
    <string name="content_lesson_reply">Svara</string>

    <!-- Empty list stuff -->
    <string name="course_no_lessons">Det finns inga lektioner här just nu.</string>
    <string name="course_no_quizzes">Det finns inga quiz här just nu.</string>
    <string name="course_no_info">Det finns ingen information om den här kursen just nu.</string>

    <string name="no_description">Det finns ingen beskrivning för det här objektet.</string>
    <string name="title_activity_my_course">Mina kurser</string>
    <string name="course_no_courses">Det finns inga kurser här.</string>

    <!-- Profile activity -->
    <string name="profile_btn_edit">Redigera</string>
    <string name="profile_btn_save">Spara</string>
    <string name="profile_hint_name">Namn</string>
    <string name="profile_hint_age">Ålder</string>
    <string name="profile_description_profile_image_circle">Cirkel runt profilbild</string>

    <!-- "Login required"-dialog -->
    <string name="dialog_login_required_info_text">Du måste vara inloggad för att komma åt den här funktionen.</string>
    <string name="dialog_login_required_button_login">Logga in</string>

    <!-- Select nameable dialog -->
    <string name="dialog_select_nameable_title">Välj %1$s</string>
    <string name="dialog_select_nameable_hint">Skriv namn för att skapa %1$s</string>
    <string name="dialog_select_nameable_create_new">Skapa ny %1$s</string>


    <!-- Create question dialog -->
    <string name="dialog_create_question_title">Skapa fråga</string>
    <string name="dialog_create_question_write_a_question">Skriv en fråga</string>
    <string name="dialog_create_question_hint">Skriv en ledtråd. (frivilligt)</string>
    <string name="dialog_create_question_correct_answer">Korrekt svar:</string>
    <string name="dialog_create_question_answer_1">Svarsalternativ 1</string>
    <string name="dialog_create_question_answer_2">Svarsalternativ 2</string>
    <string name="dialog_create_question_answer_3">Svarsalternativ 3</string>
    <string name="dialog_create_question_answer_4">Svarsalternativ 4</string>
    <string name="dialog_create_question_btn_create">Skapa</string>

    <!-- For create lesson activity -->
    <string name="create_lesson_invalid_link_title">Ogiltig länk</string>
    <string name="create_lesson_invalid_link_message">Din länk funkar inte. Var vänlig klistra in med en fungerande youtube-länk.</string>
    <string name="create_lesson_add_item">Lägg till %1$s</string>
    <string name="create_lesson_quiz_has_been_added">Quiz har lagts till</string>
    <string name="create_lesson_btn_create_lesson">Skapa lektion</string>
    <string name="create_lesson_btn_add_quiz">Lägg till quiz</string>
    <string name="create_lesson_btn_add_school">Lägg till skola</string>
    <string name="create_lesson_btn_add_subject">Lägg till ämne</string>
    <string name="create_lesson_btn_add_course">Lägg till kurs</string>
    <string name="create_lesson_et_lesson_name">Namn på lektion</string>
    <string name="create_lesson_et_youtube_url">URL till youtube-klipp</string>
    <string name="create_account_hint_password">Lösenord (Obligatoriskt)</string>

    <!-- Searchable-->
    <string name="idgi">IDGI</string>
    <string name="search_hint">Sök</string>
    <string name="action_search" />

    <!-- Hats-->
    <string name="hat_image_content_description">Bild på hatt</string>
    <string name="hat_points">%1$d poäng</string>
    <string name="title_activity_my_hats">Mina hattar</string>
    <string name="hat_name">Hattens namn</string>

    <!-- Create account -->
    <string name="list_user_name">Användare</string>
    <string name="create_account_unsuccessful_toast">Fyll i giltig information för att skapa konto</string>
    <string name="create_account_hint_repeat_password">Bekräfta lösenord</string>
    <string name="create_account_hint_email">E-postadress</string>
    <string name="create_account_finish">Registrera</string>

    <!-- Login -->
    <string name="login_account_name_hint">Användarnamn</string>
    <string name="login_password_hint">Lösenord</string>
    <string name="login_btn_text">Logga in</string>
    <string name="login_no_account">Inte medlem än? Gå med!</string>
    <string name="login_wrong_account_or_password">Fel användarnamn eller lösenord.</string>

    <!-- Search -->
    <string name="search_title">Sökresultat</string>
    <string name="search_no_matches">Inga träffar</string>
    <string name="browse_users_btn_name">Sök via namn</string>
    <string name="browse_users_btn_course">Sök via kurs</string>
    <string name="title_activity_browse_users">Hitta användare</string>

    <!-- Drawer -->
    <string name="drawer_home_page">Startsida</string>
    <string name="drawer_profile">Profil</string>
    <string name="drawer_statistics">Min Statistik</string>
    <string name="drawer_my_courses">Mina kurser</string>
    <string name="drawer_quiz">Quiz</string>
    <string name="drawer_browse">Hitta kurser</string>
    <string name="drawer_browse_users">Hitta användare</string>
    <string name="drawer_account">Konto</string>
    <string name="drawer_log_in">Logga in</string>
    <string name="drawer_create_account">Skapa konto</string>
    <string name="log_out">Logga ut</string>

    <!-- School cardview -->
    <string name="no_info_available">Det finns ingen info för tillfället</string>

    <!-- Course list -->
    <string name="course_list_course_added">Tillagd i mina kurser</string>
    <string name="course_list_course_removed">Borttagen från mina kurser</string>
    <string name="about">Om</string>
    <string name="profile_btn_my_hats">Mina hattar</string>
    <string name="quiz_dialog_timed">Med tid</string>
    <string name="quiz_dialog_normal">Normal</string>
    <string name="tab_title_lessons">Lektioner</string>
    <string name="tab_title_quiz">Quiz</string>
    <string name="tab_title_info">Info</string>
    <string name="tab_title_students">Elever</string>
    <string name="video_playing">Playing!</string>
    <string name="points_awarded">Points for you!</string>
    <string name="chat_message">Skriv ett meddelande</string>
    <string name="chat_btn_send">Skicka meddelande</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
