<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.idgi">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_home_black_24dp"
            custom:activity="StartActivity"
            android:title="@string/drawer_home_page" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/drawer_statistics" />
        <item
            android:id="@+id/nav_my_courses"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/drawer_my_courses" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_lightbulb_black_24dp"
            android:title="@string/drawer_quiz" />
        <item
            android:visible="false"
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_browse" />
        <item
            android:visible="false"
            android:id="@+id/nav_browse_users"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_browse_users" />
    </group>

    <item android:title="@string/drawer_account"
        android:id="@+id/drawer_account_item">
        <menu>
            <item
                android:id="@+id/nav_log_in"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/drawer_log_in" />
            <item
                android:id="@+id/nav_create_account"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/drawer_create_account" />
        </menu>
    </item>

</menu>
