<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              tools:context="android.fragment.StartLoggedOutFragment">

        <TextView
            style="@style/StartTitle"
            android:id="@+id/start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/app_name"/>

        <Button
            style="@style/start_menu_button"
            android:text="@string/start_btn_find_course"
            android:id="@+id/start_btn_browse"
            android:onClick="onStartButtonClick" />

        <Button
            style="@style/start_menu_button"
            android:text="@string/start_btn_log_in"
            android:id="@+id/start_btn_log_in"

            android:onClick="onLoginButtonClick" />

        <Button
            style="@style/start_menu_button"
            android:text="@string/start_btn_create_account"
            android:id="@+id/start_btn_create_account"
            android:onClick="onCreateAccountButtonClick" />

</LinearLayout>