<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fitsSystemWindows="true"
                                        layout="@style/AppTheme.Base">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/app_bar"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:background="@drawable/temp_logo"
            android:layout_gravity="center_horizontal"/>

        <Button
            style="@style/menu_button"
            android:text="@string/start_btn_find_course"
            android:id="@+id/start_btn_browse"
            android:onClick="onStartButtonClick" />

        <Button
            style="@style/menu_button"
            android:text="@string/start_btn_log_in"
            android:id="@+id/start_btn_log_in"
            android:onClick="onLogInButtonClick" />

        <Button
            style="@style/menu_button"
            android:text="@string/start_btn_create_account"
            android:id="@+id/start_btn_create_account"
            android:onClick="onCreateAccountButtonClick" />

    </LinearLayout>

    <include layout="@layout/nav_drawer"/>

</android.support.v4.widget.DrawerLayout>