<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <!--  <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"/>-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_xLarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_xLarge"
                android:text="@string/app_name"/>

             <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:alpha="0.45"
                android:layout_gravity="center"
                android:src="@drawable/ic_timeline_black_24dp"
                />

            <!-- Account name -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_timeline_black_24dp"/>
                     <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_txt_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/login_account_name_hint"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <!-- Account password -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_timeline_black_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/login_txt_account_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/login_password_hint"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_marginTop="@dimen/spacing_normal"
                android:theme="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/login_btn_text"
                android:id="@+id/login_done_button"
                android:onClick="onLoginButtonClick"/>

            <TextView
                android:id="@+id/login_txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/login_no_account"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_xLarge"
                android:textColor="@android:color/black"
                android:alpha="0.6"/>

        </LinearLayout>


    </RelativeLayout>

<!--    <include
        layout="@layout/nav_drawer"/>-->

</android.support.v4.widget.DrawerLayout>
