<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.idgi.QuizResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/result_quiz_text_finished"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/quiz_result_finished_text"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/result_quiz_text_score"
        android:textSize="35sp"
        android:layout_below="@+id/result_quiz_text_finished"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/result_quiz_star_container"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/result_quiz_text_score" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:text="@string/quiz_result_retake_quiz"
        android:background="@color/colorAnswerButtonSelected"
        android:layout_marginTop="10dp"
        android:id="@+id/result_quiz_btn_retake"
        android:layout_below="@+id/result_quiz_star_container"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:text="@string/quiz_result_done"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:id="@+id/result_quiz_btn_done"
        android:layout_below="@+id/result_quiz_btn_retake"
        android:layout_centerHorizontal="true"/>

        <android.support.v7.widget.RecyclerView
        android:id="@+id/quiz_result_recycler_view_questions_roundup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/result_quiz_btn_done"/>


</RelativeLayout>
