<?xml version="1.0" encoding="utf-8"?>
<com.idgi.android.widget.CommentLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:longClickable="true"
    android:background="@drawable/list_border">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- PROFILE PICTURE -->
        <ImageView
            android:id="@+id/lesson_listitem_comment_image_profile_picture"
            android:gravity="top"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_account_circle_black_24dp"
            android:contentDescription="@string/profile_picture"
            android:maxHeight="80dp"
            android:layout_marginTop="4dp" />
        <ImageView
            android:id="@+id/circle_crop"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/round"
            android:contentDescription="@string/profile_description_profile_image_circle"
            android:layout_marginTop="4dp"/>

        <LinearLayout
            android:id="@+id/lesson_listitem_linear_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- AUTHOR -->
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/comment_author"
                android:gravity="center|center_horizontal"
                android:text="AuthorName"/>

            <!-- COMMENT -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TESTblablablablabsjkasnfjkewdnfvjkwenkjgvnefkvbnwjkdnvksvksdnvkja chjsbcfhjbfchbfchdsbfjehbfde"
                android:id="@+id/lesson_listitem_comment_text"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textSize="15dp"/>

            </LinearLayout>
    </LinearLayout>


    <Button
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_lesson_reply"
        android:id="@+id/lesson_listitem_comment_btn_reply"
        android:onClick="onReplyButtonClick"
        android:layout_below="@+id/comment_author"
        android:enabled="true"
        android:clickable="false"
        android:background="@color/colorButton"
        android:layout_gravity="right"/>

    <!-- REPLY -->

    <!-- EXPANSION -->
    <RelativeLayout
        android:id="@+id/lesson_listitem_comment_view_to_expand_replies"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/lesson_listitem_comment_reply_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:gravity="center"
            android:singleLine="true" />
        <TextView
            android:id="@+id/lesson_listitem_comment_reply_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/answer"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_toRightOf="@id/lesson_listitem_comment_reply_text"
            android:layout_toEndOf="@id/lesson_listitem_comment_reply_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_vertical"
            android:singleLine="true" />

    </RelativeLayout>


</com.idgi.android.widget.CommentLayout>