<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@drawable/low_poly_background"
                                        android:fitsSystemWindows="true"
                                        layout="@style/AppTheme.Base">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/app_bar"/>

            <TextView
                style="@style/StartTitle"
                android:id="@+id/start_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/start_txt_welcome"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:alpha="0.7"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginTop="@dimen/spacing_normal"
                android:padding="@dimen/spacing_normal"
                android:elevation="1dp" tools:targetApi="21"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <Button
                style="@style/start_menu_button"
                android:text="@string/start_btn_find_course"
                android:id="@+id/start_btn_browse"
                android:onClick="onStartButtonClick" />

            <Button
                style="@style/start_menu_button"
                android:text="@string/start_btn_account"
                android:id="@+id/start_btn_account"
                android:onClick="onAccountButtonClick" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/start_fab_create_lesson"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            android:onClick="onLessonFabClick"
            android:src="@drawable/ic_add_white_24dp"/>

    </FrameLayout>
    
    <include layout="@layout/nav_drawer"/>

</android.support.v4.widget.DrawerLayout>